# Minecraft-Model-Reader

./: .gitattributes  .gitignore  MANIFEST.in  comment_json.py  java_block_model.py  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-build.yml  python-stylecheck.yml  python-unittests.yml
api/: block.py
minecraft_model_reader/: __init__.py  _version.py  java_block_model.py  java_rp_handler.py  missing_no.py
minecraft_model_reader/__pyinstaller/: hook-minecraft_model_reader.py
minecraft_model_reader/api/: __init__.py  _log.py  base_api.py  comment_json.py  log.py  minecraft_mesh.py  resource_pack.py
minecraft_model_reader/api/amulet/: block.py
minecraft_model_reader/api/image/: __init__.py
minecraft_model_reader/api/mesh/: util.py
minecraft_model_reader/api/mesh/block/: block_mesh.py  cube.py  missing_block.py
minecraft_model_reader/api/resource_pack/: __init__.py  base_resource_pack.py  java_resource_pack.py  unknown_resource_pack.py
minecraft_model_reader/api/resource_pack/base/: resource_pack.py  resource_pack_manager.py
minecraft_model_reader/java/: __init__.py  download_resources.py  java_block_model.py  java_rp_handler.py
minecraft_model_reader/lib/: comment_json.py  missing_no.py
tests/: bedrock_resource_pack_test.py  java_resource_pack_test.py  resource_pack_test.py
tests/panda3d_render_test/: amulet_renderer_panda3d.py  readme.md
tests/pyglet_render_test/: amulet_renderer_panda3d.py  pyglet_render_test.py  readme.md
tests/pyglet_render_test/render/: keys.py  renderer.py  world.py
(+76 files in other folders)
