[metadata]
name = minecraft-resource-pack
url = https://www.amuletmc.com
author = James Clare
author_email = amuleteditor@gmail.com
classifiers=
    Programming Language :: Python :: 3
    Operating System :: OS Independent
description = A Python library reading Minecraft's various resource pack formats.
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any


[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = ~=3.9
install_requires =
    Pillow>=10.0.1
    numpy>=1.17
    amulet-nbt~=2.0
    platformdirs~=3.1

[options.packages.find]
include = minecraft_model_reader*

[options.extras_require]
docs =
    Sphinx>=1.7.4
    sphinx-autodoc-typehints>=1.3.0
    sphinx_rtd_theme>=0.3.1
dev =
    black>=22.3
    pre_commit>=1.11.1


[options.entry_points]
pyinstaller40 =
    hook-dirs = minecraft_model_reader.__pyinstaller:get_hook_dirs


# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = minecraft_model_reader/_version.py
versionfile_build = minecraft_model_reader/_version.py
tag_prefix =
parentdir_prefix = minecraft_model_reader-
